manifests/flag-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flag-service
  namespace: flag-service   
  labels:
    app: flag-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flag-service
  template:
    metadata:
      labels:
        app: flag-service
    spec:
      serviceAccountName: flag-service-sa   
      containers:
        - name: flag-service
          image: 052058222675.dkr.ecr.us-east-1.amazonaws.com/flag-service:sha-0f33ed0
          ports:
            - containerPort: 8002
          livenessProbe:
            httpGet:
              path: /health
              port: 8002
            initialDelaySeconds: 30
            timeoutSeconds: 5
            periodSeconds: 15
          readinessProbe:
            httpGet:
              path: /health
              port: 8002
            initialDelaySeconds: 20
            timeoutSeconds: 5
            periodSeconds: 10
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
